# sayajinquizapp

backend/: db.sqlite3  pyproject.toml
backend/core/: settings.py  urls.py
backend/quiz/: models.py  serializers.py  urls.py  views.py
backend/quiz/migrations/: 0001_initial.py
frontend/src/: Quiz.js  index.js
mobile/: .gitignore  App.js  package-lock.json
